# base64

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
libs/: TurboBase64.vcxproj
result/: result.html
result/result/: decode-clang.js  decode-clang11.js  decode-clang12.js  decode-clang15.js  decode-clang16-macos.js  decode-gcc9.js  decode-msvc19.js  decode-msvc1940.js  decode-msvc1942.js  encode-clang.js  encode-clang11.js  encode-clang12.js  encode-clang15.js  encode-clang16-macos.js  encode-gcc9.js  encode-msvc19.js  encode-msvc1940.js  encode-msvc1942.js
src/: Base64SurveyBenchmark.cpp  Base64SurveyBenchmark.hpp  Base64SurveyRegistry.cpp  Base64SurveyRegistry.hpp  Base64SurveyRepoort.cpp  Base64SurveyReport.hpp  Base64SurveyTests.cpp  Base64SurveyTests.hpp  main.cpp  test_base.hpp
src/A.Hristov/: ahristov.cpp  ahristov.h  test_ahristov.cpp
src/DaedalusAlpha/: DaedalusAlpha.cpp  DaedalusAlpha.h  test_DaedalusAlpha.cpp
src/ElegantDice/: ElegantDice.cpp  ElegantDice.h  test_ElegantDice.cpp
src/IMUtility/: polfosol_imutility.h  test_polfosol_imutility.cpp
src/InternetSoftwareConsortium/: InternetSoftwareConsortium.cpp  InternetSoftwareConsortium.h  test_InternetSoftwareConsortium.cpp
src/JouniMalinen/: jounimalinen.h  test_jounimalinen.cpp
src/LihO/: LihO.cpp  LihO.h  test_LihO.cpp
src/ManuelMartinez/: ManuelMartinez.h  test_ManuelMartinez.cpp
src/NibbleAndAHalf/: NibbleAndAHalf.h  test_NibbleAndAHalf.cpp
src/Turbob64/: test_turbob64.cpp
src/adition/: adition.cpp  adition.hpp  test_adition.cpp
src/adp-gmbh.ch/: base64.cpp  base64.h  test_adp-gmbh.cpp
src/apache/: apache.h  test_apache.cpp
src/arduino/: arduino.h  test_arduino.cpp
src/base64-aklomp/: test_base64-aklomp.cpp
src/base64-tl/: test_base64-tl.cpp
src/base64pp/: test_base64pp.cpp
src/boost/: test_boost.cpp
src/cppcodec/: test_cppcodec.cpp
src/gnome/: gnome.h  test_gnome.cpp
src/libb64/: test_libb64.cpp
src/libb64/libb64/src/: cdecode.c  cencode.c
src/libcurl/: curl_base64.cpp  curl_base64.h  test_libcurl.cpp
src/modp_b64_chromium/: modp_b64_chromium.cpp
src/omnifarious/: omnifarious.cpp  omnifarious.h  test_omnifarious.cpp
src/picobase64/: test_picobase64.cpp
src/polfosol/: polfosol.h  test_polfosol.cpp
src/renenyffenegger/: renenyffenegger.cpp  renenyffenegger.h  test_renenyffenegger.cpp
src/simdutf/: test_simdutf.cpp
src/tomykaria/: test_tomykaria.cpp  tomykaria.hpp
src/user152949/: test_user152949.cpp  user152949.h
src/wikibooks.org/: test_wikibooks_org_c.cpp  test_wikibooks_org_cpp.cpp  wikibooks_org_c.h  wikibooks_org_cpp.h
