cmake_minimum_required(VERSION 2.4)
#CLANG compiler activation options
SET (CMAKE_C_COMPILER "/usr/bin/clang")
SET (CMAKE_CXX_COMPILER "/usr/bin/clang++")

set(CMAKE_BUILD_TYPE Release)
set(NAME base64.bin)
project (${NAME})

# Update if necessary
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")


AUX_SOURCE_DIRECTORY(./src/ CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/adp-gmbh.ch CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/apache CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/arduino CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/cppcodec CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/DaedalusAlpha CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/ElegantDice CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/gnome CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/InternetSoftwareConsortium CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/JouniMalinen CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/libb64 CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/libcurl CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/LihO CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/ManuelMartinez CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/NibbleAndAHalf CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/omnifarious CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/polfosol CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/user152949 CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/wikibooks.org CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/adition CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/renenyffenegger CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/tomykaria CTR_SOURCES)
AUX_SOURCE_DIRECTORY(./src/stov-180947 CTR_SOURCES)

AUX_SOURCE_DIRECTORY(./src/libb64/libb64/src C_SOURCES)

SET_SOURCE_FILES_PROPERTIES( ${CTR_SOURCES} PROPERTIES LANGUAGE CXX )
SET_SOURCE_FILES_PROPERTIES( ${C_SOURCES} PROPERTIES LANGUAGE C )

add_executable(${NAME} ${CTR_SOURCES} ${C_SOURCES})
target_link_libraries(${NAME} gtest pthread)
